snapshots/care/data4life/hc-util-sdk-kmp/error/maven-metadata.xml.sha512
50e028a3aeb771a7cff1f244d4656decc9748f0ea1960d9453a6b6cb84ab975a2bebe25a4b883d9dd63a9257555f01a604b6e23de85030cb42dd4306eded7c7a